# rag-vector-chat

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: config.py  database.py  main.py
src/chat/: models.py  router.py  service.py
src/documents/: router.py  service.py
src/templates/: index.html
src/templates/partials/: chat_workspace.html  document_card.html  document_list_items.html  message.html  message_pair.html  new_chat_response.html  sidebar_chats.html
