[project]
name = "rag-vector-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.136.3",
    "jinja2>=3.1.6",
    "langchain-community>=0.4.2",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.38.0",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.12.2",
    "python-multipart>=0.0.30",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]
